assets/css/tabfloater.css
/*
 * Copyright 2020 Balazs Gyurak
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.nav {
    z-index: 99;
    left: 0;
    right: 0;
}

.nav-index-page {
    position: absolute;
}

.uk-sticky-placeholder {
    height: 0 !important;
}

.top-container {
    z-index: 2;
}

.top-content-height {
    height: 80vh;
    min-height: 460px;
    transition: height 0.25s;
}

.uk-subnav-pill > * > :first-child {
    padding: 0.5rem 1rem;
    background-color: rgba(0, 0, 0, 0.04);
}

.subtitle-text {
    font-size: 1.2em;
    opacity: 0.7;
    font-weight: 300;
}

.uk-logo img {
    height: 45px;
}

.img-logo-large {
    width: 150px;
}

.uk-card-small {
    padding: 7px;
}

.shadow {
    -webkit-box-shadow: 9px 10px 12px -3px rgba(0,0,0,0.30);
    -moz-box-shadow: 9px 10px 12px -3px rgba(0,0,0,0.30);
    box-shadow: 9px 10px 12px -3px rgba(0,0,0,0.30);
}

.firefox-badge {
    width: 200px;
    margin-top: 15px;
}

/* Code blocks */

pre {
    border: 0 solid #e5e5e5 !important;
    border-radius: 0 !important;
    background: #f6f8fa !important;
    padding: 15px !important;
    margin: 0px !important;
}

.codeContainer:hover {
    cursor: pointer;
}

.copyCodeSuccessIcon {
    padding: 7px !important;
    margin-right: 8px !important;
}

/* Cookier banner */

#cBanner {
    z-index: 100;
}

/* Header offsets for documentation links */

.header-offset {
    padding-top: 80px;
    margin-top: -80px;
}

